# Potatoes

./: Cargo.toml
client/: Cargo.toml
client/src/: hash_cash_challenge.rs  main.rs  tmp.rs
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
