[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shared = { path = "../shared" }
serde= {version = "1.0.1", features = ["derive"]}
serde_json = "1.0"
serde_unit_struct = "0.1.1"
rand = "0.8.5"
md5 = "0.7.0"